[package]
name = "roomtone"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
cpal = "0.15.0"
ringbuf = "0.3"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
alsa = { version = "^0.7", optional = true }

[features]
alsa-backend = ["alsa"]

[[bin]]
name = "roomtone_debug"
path = "src/device_debug.rs"
